--- a/.config/sioyek/prefs_user.config
+++ b/.config/sioyek/prefs_user.config
@@ -1,6 +1,6 @@
 font_size 20
 status_bar_font_size 15
-flat_toc 1
+flat_toc 0
 enable_experimental_features 1
 should_use_multiple_monitors 1
 collapsed_toc 1
@@ -9,19 +9,10 @@ collapsed_toc 1
 background_color           #272e33
 
 text_highlight_color       #d3c6aa
-# vertical_line_color        #d3c6aa
 
-search_highlight_color     #eed49f
-link_highlight_color       #8aadf4
-synctex_highlight_color    #a6da95
-
-highlight_color_a          #eed49f
-highlight_color_b          #a6da95
-highlight_color_c          #91d7e3
-highlight_color_d          #ee99a0
-highlight_color_e          #c6a0f6
-highlight_color_f          #ed8796
-highlight_color_g          #eed49f
+search_highlight_color     #a7c080
+link_highlight_color       #a7c080
+synctex_highlight_color    #a7c080
 
 
 custom_background_color    #272e33
@@ -32,11 +23,11 @@ status_bar_text_color      #d3c6aa
 
 ui_text_color              #d3c6aa
 ui_background_color        #272e32
-ui_selected_text_color     #cad3f5
-ui_selected_background_color #5b6078
+ui_selected_text_color     #272e33
+ui_selected_background_color #d3c6aa
 
 # =============== #
-# super_fast_search 1
+super_fast_search 1
 startup_commands toggle_custom_color
 new_command _dual_panelify python -m sioyek.dual_panelify "%{sioyek_path}" "%{file_path}" "%{command_text}"
 new_command _translate_selected_text python -m sioyek.translate "%{sioyek_path}" "%{selected_text}"
