--- a/.config/lsd/config.yaml
+++ b/.config/lsd/config.yaml
@@ -1,21 +1,5 @@
-#
-# ██╗     ███████╗██████╗
-# ██║     ██╔════╝██╔══██╗
-# ██║     ███████╗██║  ██║
-# ██║     ╚════██║██║  ██║
-# ███████╗███████║██████╔╝
-# ╚══════╝╚══════╝╚═════╝
-#
-# LSD Config File by Arfan Zubi
-
-
-# == Classic ==
 classic: false
 
-# == Blocks ==
-# This specifies the columns and their order when using the long and the tree
-# layout.
-# Possible values: permission, user, group, context, size, date, name, inode, links, git
 blocks:
   - permission
   - user
@@ -24,49 +8,26 @@ blocks:
   - date
   - name
 
-# == Color ==
-# This has various color options. (Will be expanded in the future.)
 color:
-  # When to colorize the output.
-  # When "classic" is set, this is set to "never".
-  # Possible values: never, auto, always
   when: auto
-  # How to colorize the output.
-  # When "classic" is set, this is set to "no-color".
-  # Possible values: default, custom
-  # When "custom" is set, lsd will look in the config directory for `colors.yaml`.
   theme: custom
 
-# == Date ==
-# This specifies the date format for the date column. The freeform format
-# accepts a strftime like string.
-# When "classic" is set, this is set to "date".
-# Possible values: date, relative, '+<date_format>'
-# `date_format` will be a `strftime` formatted value. e.g. `date: '+%d %b %y %X'` will give you a date like this: 17 Jun 21 20:14:55
-date: date
+date: '+%A, %d %B %Y, %R'
 
 # == Dereference ==
 # Whether to dereference symbolic links.
 # Possible values: false, true
 dereference: false
 
-# == Display ==
-# What items to display. Do not specify this for the default behavior.
-# Possible values: all, almost-all, directory-only
-# display: all
-
 # == Icons ==
 icons:
-  # When to use icons.
-  # When "classic" is set, this is set to "never".
-  # Possible values: always, auto, never
   when: auto
   # Which icon theme to use.
   # Possible values: fancy, unicode
   theme: fancy
   # Separator between icon and the name
   # Default to 1 space
-  separator: " "
+  separator: ' '
 
 # == Ignore Globs ==
 # A list of globs to ignore when listing.
@@ -78,10 +39,6 @@ icons:
 # Possible values: false, true
 indicators: false
 
-# == Layout ==
-# Which layout to use. "oneline" might be a bit confusing here and should be
-# called "one-per-line". It might be changed in the future.
-# Possible values: grid, tree, oneline
 layout: grid
 
 # == Recursion ==
@@ -93,28 +50,18 @@ recursion:
   # it unspecified for (virtually) infinite.
   # depth: 3
 
-# == Size ==
-# Specifies the format of the size column.
-# Possible values: default, short, bytes
 size: default
 
-# == Permission ==
-# Specify the format of the permission column
-# Possible value: rwx, octal
 permission: rwx
 
 # == Sorting ==
 sorting:
-  # Specify what to sort by.
-  # Possible values: extension, name, time, size, version
   column: name
-  # Whether to reverse the sorting.
-  # Possible values: false, true
   reverse: false
   # Whether to group directories together and where.
   # When "classic" is set, this is set to "none".
   # Possible values: first, last, none
-  dir-grouping: none
+  dir-grouping: first
 
 # == No Symlink ==
 # Whether to omit showing symlink targets
@@ -124,7 +71,7 @@ no-symlink: false
 # == Total size ==
 # Whether to display the total size of directories.
 # Possible values: false, true
-total-size: false
+total-size: true
 
 # == Hyperlink ==
 # Attach hyperlink to filenames
@@ -138,4 +85,5 @@ symlink-arrow: ⇒
 # == Header ==
 # Whether to display block headers.
 # Possible values: false, true
-header: false
+header: true
+
